--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,2 @@
-# Vercel-optimized requirements
-flask>=2.3.0
-requests>=2.31.0
-pyspellchecker>=0.7.2
-numpy>=1.24.0
-python-dateutil>=2.8.2
+# Minimal requirements for Vercel deployment
+flask==2.3.3
